Blog index polish; replacing old font-awesome chevron icons with new CSS-based hover style.

--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -50,7 +50,7 @@ layout: company
                         <li>Compliance moves at the speed of trust.</li>
                         <li>Transparency is how complex subjects, like HIPAA or GDPR, become easier to understand. We're trusted because we're transparent.</li>
                         <li>Healthcare application development shouldn't be harder than other industry just because of HIPAA. Doing business in the European Union shouldn't be harder because of GDPR. Compliance shouldn't block progress.</li>
-                        <li>Give back to the developer community whenever possible. Use open source tools whenever possible. Our <a href="/open-source">open source contributions <i class="fa fa-caret-right"></i></a></li>
+                        <li>Give back to the developer community whenever possible. Use open source tools whenever possible. Learn more about our <a class="link-arrow" href="/open-source">open source contributions.</a></li>
                         <li>We know we can't make the cloud better alone. Industry collaboration is important. Work together for the greater good.</li>
                     </ul>
                 </div>
