--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -202,6 +202,32 @@
         }
     }
 }
+.link-arrow {
+    // @apply .uppercase .font-bold .text-base .no-underline .font-bold .text-green-deep .tracking-relaxed;
+    &::after {
+        transition: transform $timing-default * 2 ease, opacity $timing-default * 2 ease;
+        content: url("/assets/icons/inlined/small/icon-chevron-right-blue.svg");
+        // content: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='18' height='15' viewBox='0 0 18 15'><path d='M7.5 4.5L6.44 5.56 9.88 9l-3.44 3.44L7.5 13.5 12 9z' fill='currentColor'/><path d='M0 0h18v18H0z' fill='none'/></svg>");
+        // content: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='9' height='28'><path fill='currentColor' d='M9.297 15c0 0.125-0.063 0.266-0.156 0.359l-7.281 7.281c-0.094 0.094-0.234 0.156-0.359 0.156s-0.266-0.063-0.359-0.156l-0.781-0.781c-0.094-0.094-0.156-0.219-0.156-0.359 0-0.125 0.063-0.266 0.156-0.359l6.141-6.141-6.141-6.141c-0.094-0.094-0.156-0.234-0.156-0.359s0.063-0.266 0.156-0.359l0.781-0.781c0.094-0.094 0.234-0.156 0.359-0.156s0.266 0.063 0.359 0.156l7.281 7.281c0.094 0.094 0.156 0.234 0.156 0.359z'></path></svg>");
+        opacity: 0.6;
+        display: inline-block;
+        width:  0.8em;
+        height: 0.8em;
+        margin-left: 0.2em;
+        transform: translate3d(0px, 0.05em, 0);
+    }
+    &--white::after {
+        content: url("/assets/icons/inlined/small/icon-chevron-right-white.svg");
+    }
+    &--yellow::after {
+        content: url("/assets/icons/inlined/small/icon-chevron-right-yellow.svg");
+    }
+    &:hover:after {
+        transition: transform $timing-default * 0.5 ease, opacity $timing-default * 0.5 ease;
+        transform: translate3d(3px, 0.05em, 0);
+        opacity: 1;
+    }
+}
 .link--white-parent { // when you need to style a link inside a component/partial
     a {
         font-weight: $font-weight-bold;
