--- a/source/partials/snippets/_form.slim
+++ b/source/partials/snippets/_form.slim
@@ -2,5 +2,10 @@ ruby:
 	unless defined?(the_form)
 		puts "The form partial at #{current_page.url} is not defined!"
 	end
-#hsFormContainer
+	if defined?(formId) # ex :formId => 'foo'; in case there's more than 1 embed on a page
+		formAnchor = '#' + formId
+	else
+		formAnchor = '#hsFormContainer'
+	end
+div id = formAnchor
 = Kramdown::Document.new(the_form).to_html
