--- a/source/contentful_templates/blog.html.erb
+++ b/source/contentful_templates/blog.html.erb
@@ -135,7 +135,7 @@ end
 <% if p.has_key?("related_entries") && p["related_entries"].count > 1 %>
     <section class="section-article--med container-gray-10">
         <h4 class="headline-5 text--spaced text-center group">Related</h4>
-        <div class="row full-width small-up-1 medium-up-2 large-up-3 xxlarge-up-4 align-center">
+        <div class="row full-width small-up-1 medium-up-2 large-up-3 xlarge-up-4 align-center">
             <% p["related_entries"].each do | relatedPost | %>
             <% 
             # mapping content type to paths. How could this be a ruby helper or function?
@@ -146,7 +146,7 @@ end
             #end
             #related_post_path = "/" + url_segment + "/" + relatedPost.slug 
             %>
-                <div class="column">
+                <div class="column group">
                     <%= partial "partials/cards/featured-blog", :locals => { :post => relatedPost, :style => "light", :size => "small" } %>
                 </div>
             <% end %>
