--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -28,6 +28,27 @@ block_tech:
     title: "File storage and distribution"
     body: "From workers to caching, Compliant Cloud gives you the flexibility to configure your environments your way with useful add-ons."
     image: https://images.ctfassets.net/189dvqdsjh46/67qGlOMbMQ842E4WSgOIOS/15ed7de57be473dcfa6a8563306c2720/technology-deployments.png
+block_benefits:
+  -
+    title: "A single, smart BAA"
+    feature: "Datica takes on all the risk via one smart Business Associate Agreement."
+    benefit: "You don't have to juggle multiple BAAs and align conflicting requirements—typically a huge headache!"
+  -
+    title: "Always up-to-date"
+    feature: "Datica is responsible for staying current with all regulation changes."
+    benefit: "You never have to spend time and money to stay current on government changes, which are hard to track."
+  -
+    title: "Save money on audits"
+    feature: "Datica absorbs the cost of third-party audits and HITRUST certification."
+    benefit: "It all comes down to audits, which can cost $100,000s across technologies, and are reoccurring annual costs."
+  -
+    title: "Prevent maintenance headaches"
+    feature: "Datica shoulders the responsibility of maintenance, updates, and patches."
+    benefit: "Every single update or patch you would do to your infrastructure needs to be done in a compliant way. The time-cost requirements add up quickly."
+  -
+    title: "Faster time-to-market"
+    feature: "Datica's tools immediately bring your organization to the starting line, enabling focus on business priorities."
+    benefit: "Do not waste precious months getting your infrastructure to a compliant state just to get started on your product or initiative."
 ---
 - current_page.data.share_image = image_share_platform
 - the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
@@ -108,11 +129,10 @@ section#capabilities.section-article.container-color--dark-alt
   .row.align-center
     .columns.small-12.medium-8.large-6
       h2.heading-3.text-center.group Powerful capabilities and features under the hood
-      ul.list-check
+      ul.list-check.text-larger
         li Quickly deploy IPSEC or TLS VPNs in minutes
         li Nightly backups
-        li Proactive security patching.
-          em Remember WannaCry? We were patched 1 month prior to it hitting.
+        li Proactive security patching. <em>Remember WannaCry? We were patched 1 month prior to it hitting.</em>
         li Automation of network overlays across Docker containers
         li Let’s Encrypt
         li Self-service scaling of internal application and database services
@@ -120,6 +140,37 @@ section#capabilities.section-article.container-color--dark-alt
         li Hot database swaps
         li Enhanced service scheduling with zones
 
+section#ui.section-article.container-gray-12
+  .row.align-center
+    .columns.small-12.large-8
+      p.lead
+        | Using the Datica web dashboard is a delightful experience, with a full suite of tools available at your fingertips. The dashboard and CLI make building apps engaging while maintaining security.
+  .row.align-center
+    .columns.small-12
+      - ui = 'https://images.ctfassets.net/189dvqdsjh46/3n9ldRiT84qkuwESeoo4Mq/cffc435a4ceb2b2deb49d7b4c53ff7bc/legacy_cpaas_UI_mockup__a.png'
+      img.lozad data-src=ui+'?w=600' data-srcset="#{ui}?w=800 1000w, #{ui} 1400w"
+  .row.align-center
+    .columns.small-12.large-4
+      = inline_svg('icon-large-mobile-globe', class: "icon-size--medium")
+      h4.headline-5 Optimized for web and mobile
+      p The dashboard is designed for the best experience on both web and rs access to the control they need within the tools they are used to.
+    .columns.small-12.large-4
+      = inline_svg('icon-datica-cli', class: "icon-size--medium")
+      h4.headline-5 Command Line Interface
+      p The Datica CLI gives engineers access to the control they need within the tools they are used to.
+
+section.section-article.container-gray-12
+  - case_studies = data.site.collections.to_a.select { | id, cust | (id == "3HG3kERl1YaGiSoSiO6wEI") }
+  - case_studies.each do | id, cardgroup |
+    .row.align-center
+      .columns.small-12.text-center.group
+        h2.headline-3 = cardgroup.title
+    .row.full-width.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
+      - cardgroup["related_entries"].each do | card |
+        - carditem = data.site.caseStudy[card.id]
+        - cust = data.site.customers[carditem.customer.id]
+        .column
+          = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cust } 
 / section.section-article.container-image--fixed.container-color--blue-bright-noise
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
@@ -147,7 +198,7 @@ section#capabilities.section-article.container-color--dark-alt
               a href: "/platform/integration", title: "Learn more about integration capabilities" 
                 | Learn more about integration capabilities
                 i.fa.fa-icon.fa-angle-right
-section.section-article
+/section.section-article
   #companies.row.align-center
     .columns.small-12.large-12.text-center
       h3.headline-3 World-class companies trust Datica
@@ -157,51 +208,96 @@ section.section-article
       a.button.hollow href="/platform/success" title="Customer Success Stories" 
         | View Customer Success Stories
         i.fa.fa-icon.fa-angle-right
+
 section.section-article.container-color--gray-dark-grad-mono-noise
+  .row.align-center
+    .columns.small-12.large-8
+      h3.headline-3.text-center Compliance ownership is a liability, not an asset. Don't shoulder that risk by yourself.
+      p.lead.text-center Those who choose the Datica Platform get the calculus right.
+      .row.text-center
+        .columns.small-6
+          h5.headline-5.spaced-out.text--blue-glow What we do...
+        .columns.small-6
+          h5.headline-5.spaced-out.text--green-glow ...to your benefit
+      - current_page.data.block_benefits.each do | item |
+        .group
+          h4.headline-5.text-center
+            | #{item.title}
+            / = inline_svg("small/icon-ui-checkmark", class: "icon-inline")
+          .row
+            .columns.small-6.text--blue-glow = item.feature
+            .columns.small-6.text--green-glow = item.benefit
+
+/section.section-article.container-color--gray-dark-grad-mono-noise
   .row.align-center
     .columns.small-12.medium-8.text-center.section--header-dark-group
       h3.headline-3 Compliance ownership is a liability, not an asset. Don't shoulder that risk by yourself.
   .row.align-center
     p.lead.text-center Those who choose the Datica Platform get the calculus right.
     .columns.small-12.large-8
-      table.table.table--dark.table--chubby-cells
+      table.table.table--none valign="top"
         thead
           tr
             th 
-            th What we do...
-            th ...to your benefit
+            th.strong What we do...
+            th.strong ...to your benefit
         tbody
           tr
             td
-              i.fa.fa-check.green-check
+              = inline_svg("small/icon-ui-checkmark", class: "svg-color--green icon-size--small")
             td
-              | <strong>BAAs</strong><br/>Datica takes on all the risk via one smart Business Associate Agreement.
+              h4.headline-5.nomargin BAAs
+            td
+          tr
+            td
+            td
+              | Datica takes on all the risk via one smart Business Associate Agreement.
             td You don't have to juggle multiple BAAs and align conflicting requirements—typically a huge headache!
           tr
             td
-              i.fa.fa-check.green-check
+              = inline_svg("small/icon-ui-checkmark", class: "svg-color--green icon-size--small")
             td
-              | <strong>Up-to-date</strong><br/>Datica is responsible for staying current with all regulation changes.
+              h4.headline-5.nomargin Up-to-date
+            td
+          tr
+            td
+            td
+              | Datica is responsible for staying current with all regulation changes.
             td You never have to spend time and money to stay current on government changes, which are hard to track.
           tr
             td
-              i.fa.fa-check.green-check
+              = inline_svg("small/icon-ui-checkmark", class: "svg-color--green icon-size--small")
             td
-              | <strong>Audits</strong><br/>Datica absorbs the cost of third-party audits and HITRUST certification.
+              h4.headline-5.nomargin Audits
+            td
+          tr
+            td
+            td
+              | Datica absorbs the cost of third-party audits and HITRUST certification.
             td It all comes down to audits, which can cost $100,000s across technologies, and are reoccurring annual costs.
           tr
             td
-              i.fa.fa-check.green-check
+              = inline_svg("small/icon-ui-checkmark", class: "svg-color--green icon-size--small")
             td
-              | <strong>Maintenance Headaches</strong><br/>Datica shoulders the responsibility of maintenance, updates, and patches.
+              h4.headline-5.nomargin Maintenance Headaches
+            td
+          tr
+            td
+            td
+              | Datica shoulders the responsibility of maintenance, updates, and patches.
             td Every single update or patch you would do to your infrastructure needs to be done in a compliant way. The time-cost requirements add up quickly.
           tr
             td
-              i.fa.fa-check.green-check
+              = inline_svg("small/icon-ui-checkmark", class: "svg-color--green icon-size--small")
             td
-              | <strong>Time-to-Market</strong><br/>Datica's tools immediately bring your organization to the starting line, enabling focus on business priorities.
+              h4.headline-5.nomargin Time-to-Market
+            td
+          tr
+            td
+            td
+              | Datica's tools immediately bring your organization to the starting line, enabling focus on business priorities.
             td Do not waste precious months getting your infrastructure to a compliant state just to get started on your product or initiative.
-section.section-article.container-color--gray-light
+/section.section-article.container-color--gray-light
   .row.group
     .column.text-center
       .group
