--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -211,22 +211,20 @@ section.section-article.container-gray-12
 
 section.section-article.container-color--gray-dark-grad-mono-noise
   .row.align-center
-    .columns.small-12.large-8
-      h3.headline-3.text-center Compliance ownership is a liability, not an asset. Don't shoulder that risk by yourself.
-      p.lead.text-center Those who choose the Datica Platform get the calculus right.
-      .row.text-center
-        .columns.small-6
-          h5.headline-5.spaced-out.text--blue-glow What we do...
-        .columns.small-6
-          h5.headline-5.spaced-out.text--green-glow ...to your benefit
-      - current_page.data.block_benefits.each do | item |
-        .group
-          h4.headline-5.text-center
-            | #{item.title}
-            / = inline_svg("small/icon-ui-checkmark", class: "icon-inline")
-          .row
-            .columns.small-6.text--blue-glow = item.feature
-            .columns.small-6.text--green-glow = item.benefit
+    .columns.small-12.large-8.text-center
+      h3.headline-3 Compliance ownership is a liability, not an asset. Don't shoulder that risk by yourself.
+      / p.lead Those who choose the Datica Platform get the calculus right.
+  .row.group--sm
+    .columns.small-6.medium-4.medium-offset-3
+      h5.headline-5.spaced-out.text--blue-glow What we do...
+    .columns.small-6.medium-5
+      h5.headline-5.spaced-out.text--green-glow ...to your benefit
+  - current_page.data.block_benefits.each do | item |
+    .row.group--sm
+      .columns.small-12.medium-3.text-right
+        h4.headline-5 = item.title
+      .columns.small-12.medium-4.text--blue-glow = item.feature
+      .columns.small-12.medium-5.text--green-glow = item.benefit
 
 /section.section-article.container-color--gray-dark-grad-mono-noise
   .row.align-center
