Updated CPaaS UI/CLI mockup

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -90,7 +90,7 @@ section#intro.section-article.container-gray-12
       p.lead Your app is now compliant on Datica.
       p Once you’re application is live on Datica you’ll enjoy a suite of tools and products to manage your application’s environment. From intrusion detection to backups and much much more.
 
-section#hitrust.section-article.container-gray-11
+section#hitrust.section-article
   .row.align-center.group
     .columns.small-12.medium-10.large-8.text-center
       img.lozad.logo-size--large.group--sm data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/6438fbb76abda83deac6b9c810745891/hitrust-logo.svg?fm=png&w=480" alt="HITRUST Certified"
@@ -148,17 +148,17 @@ section#ui.section-article.container-gray-11
         | Using the Datica web dashboard is a delightful experience, with a full suite of tools available at your fingertips. The dashboard and CLI make building apps engaging while maintaining security.
   .row.align-center
     .columns.small-12
-      - ui = 'https://images.ctfassets.net/189dvqdsjh46/3n9ldRiT84qkuwESeoo4Mq/cffc435a4ceb2b2deb49d7b4c53ff7bc/legacy_cpaas_UI_mockup__a.png'
-      img.lozad data-src=ui+'?w=600' data-srcset="#{ui}?w=800 1000w, #{ui} 1400w"
+      - ui = 'https://images.ctfassets.net/189dvqdsjh46/3n9ldRiT84qkuwESeoo4Mq/14115cc48d5c89252553e2966ad5c16a/cpaas-mockup-2017-2x.png'
+      img.lozad.group data-src=ui+'?w=600' data-srcset="#{ui}?w=800 1000w, #{ui} 1400w"
   .row.align-center
     .columns.small-12.large-4
-      = inline_svg('icon-large-mobile-globe', class: "icon-size--medium")
-      h4.headline-5 Optimized for web and mobile
-      p The dashboard is designed for the best experience on both web and rs access to the control they need within the tools they are used to.
+      = inline_svg('icon-large-mobile-globe', class: "icon-size--large svg-color--blue")
+      h4.headline-5 The tools you need
+      p The web dashboard gives access to logs, performance statistics, cluster management, key variables and other info. 
     .columns.small-12.large-4
-      = inline_svg('icon-datica-cli', class: "icon-size--medium")
+      = inline_svg('icon-datica-cli', class: "icon-size--large svg-color--blue")
       h4.headline-5 Command Line Interface
-      p The Datica CLI gives engineers access to the control they need within the tools they are used to.
+      p The Datica CLI gives engineers access to the control they need, with the tools they are used to.
 
 section#benefits.section-article.container-color--gray-dark-grad-mono-noise
   .row.align-center
