New, flexible video+quote partial. Defaults to MLH AWS video & quote. Replaces MLH partial.

--- a/source/assets/scss/modules/utility.scss
+++ b/source/assets/scss/modules/utility.scss
@@ -74,7 +74,7 @@ hr {
         max-width: 30rem;
         max-width: 30vw;
     }
-    &.content { // just an invisible spacer
+    &.content, &.spacer { // just an invisible spacer
         border: none;
         margin: 2rem 0;
     }
