first pass at design feedback via InVision

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -14,19 +14,19 @@ priority: "0.9"
 block_tech:
   -
     title: "The latest open source languages"
-    body: "Use the language which best fits your application. Compliant Cloud doesn’t limit you to proprietary languages or a single option."
+    body: "Use the language which best fits your application. CPaaS doesn’t limit you to proprietary languages or a single option."
     image: https://images.ctfassets.net/189dvqdsjh46/2Xobqxpydi888amgmq4cmM/16d678d421c6a4ca8ca5233bae9c8659/technology-langs.png
   -
     title: "The most popular databases in the world"
-    body: "Pick your preference. Compliant Cloud handles the latest leading database technologies, and automatically configures them to be compliant."
+    body: "Pick your preference. CPaaS handles the latest leading database technologies, and automatically configures them to be compliant."
     image: https://images.ctfassets.net/189dvqdsjh46/2pR1WKIz4cwi0iIemKWwyo/746da97d1e3de62098a23b879e6c3da4/technology-dbs.png
   -
     title: "Mature utilities"
-    body: "From workers to caching, Compliant Cloud gives you the flexibility to configure your environments your way with useful add-ons."
+    body: "From workers to caching, CPaaS gives you the flexibility to configure your environments your way with useful add-ons."
     image: https://images.ctfassets.net/189dvqdsjh46/6zN11I8ri8KSk8quuEa6K2/471fc533868669f2d09bf624fc79836f/technology-utilities.png
   -
-    title: "File storage and distribution"
-    body: "From workers to caching, Compliant Cloud gives you the flexibility to configure your environments your way with useful add-ons."
+    title: "Flexible Deployments"
+    body: "Use our buildpacks with a simple git-push process, or configure your own process with mature tools. It's your choice."
     image: https://images.ctfassets.net/189dvqdsjh46/67qGlOMbMQ842E4WSgOIOS/15ed7de57be473dcfa6a8563306c2720/technology-deployments.png
 block_benefits:
   -
@@ -56,19 +56,14 @@ block_benefits:
 section#intro.section-article.container-gray-12
   .row.align-center
     .columns.small-12.medium-10.large-6.text-center
-      h1.headline-3 The cloud enablement layer for <br><strong>all healthcare</strong> applications
-      p The Datica platform makes hosting compliant healthcare applications and data integration tooling as simple as <code>git-push</code>.
-  .row.align-center.group--2x
-    .columns.small-12.large-4
-      p The Datica platform enables you to focus on building and securing your app by managing all compliance and security obligations on the cloud.
-      p This is what <strong>complete HIPAA compliance in the cloud</strong> looks like.
-    .columns.small-12.large-8
+      h1.headline-3 The Compliant Cloud Platform Perfectly Designed for Early-Stage Applications
+      p The Datica Compliant Platform as a Service (CPaaS) makes hosting compliant healthcare applications as simple as <code>git-push</code>.
       img.img-crisp.lozad.group alt="Compliance Overview diagram" data-src="https://images.ctfassets.net/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/9b634cd5b8a778dc4fc7ae51d6a11239/platform-overview-diagram-2x.png" /
 
   #building.row.align-center
     .columns.small-12.text-center
-      h2.headline-4.nomargin Building On The Platform
-      p.lead See how developers use the Datica platform to build compliant applications
+      h2.headline-4.nomargin Building On CPaaS
+      p.lead See how developers build compliant applications
   .row.section-platform--technology-build
     .columns.small-12.medium-4.align-center
       img.lozad.pad alt="Build" data-src="https://images.ctfassets.net/189dvqdsjh46/6p4qvRe42kM8mcAyGqiIwE/f713310dfcf586ba5251e15f958f92f8/build_flow_step_1.png?w=400" /
@@ -105,7 +100,7 @@ section#hitrust.section-article
       .card.drop
         .card-section
           h4.headline-5 Datica’s HITRUST CSF Certification gives you industry credibility overnight
-          p Datica leads the industry with the first, most complete HIPAA compliant cloud infrastructure. Datica Managed Cloud is HITRUST CSF Certified on AWS, Microsoft Azure, IBM SoftLayer, and Rackspace, achieving the highest industry privacy and security standards across infrastructure providers.
+          p Datica leads the industry with the first, most complete HIPAA compliant cloud infrastructure. Datica CPaaS is HITRUST CSF Certified achieving the highest industry privacy and security standards across infrastructure providers.
     .column
       .card.drop
         .card-section
@@ -143,8 +138,8 @@ section#tech.section-article
 
 section#ui.section-article.container-gray-11
   .row.align-center
-    .columns.small-12.large-8
-      p.lead
+    .columns.small-12.large-6
+      p.lead.text-center.group
         | Using the Datica web dashboard is a delightful experience, with a full suite of tools available at your fingertips. The dashboard and CLI make building apps engaging while maintaining security.
   .row.align-center
     .columns.small-12
@@ -163,7 +158,7 @@ section#ui.section-article.container-gray-11
 section#benefits.section-article.container-color--gray-dark-grad-mono-noise
   .row.align-center
     .columns.small-12.large-8.text-center
-      h3.headline-3 Compliance ownership is a liability, not an asset. Don't shoulder that risk by yourself.
+      h3.headline-3.group Compliance ownership is a liability, not an asset. Don't shoulder that risk by yourself.
       / p.lead Those who choose the Datica Platform get the calculus right.
   .row.group--sm
     .columns.small-6.medium-4.medium-offset-3
