working through feedback

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -55,10 +55,10 @@ block_benefits:
 
 section#intro.section-article.container-gray-12
   .row.align-center
-    .columns.small-12.medium-10.large-6.text-center
+    .columns.small-12.medium-10.large-8.text-center
       h1.headline-3 The Compliant Cloud Platform Perfectly Designed for Early-Stage Applications
       p The Datica Compliant Platform as a Service (CPaaS) makes hosting compliant healthcare applications as simple as <code>git-push</code>.
-      img.img-crisp.lozad.group alt="Compliance Overview diagram" data-src="https://images.ctfassets.net/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/9b634cd5b8a778dc4fc7ae51d6a11239/platform-overview-diagram-2x.png" /
+      img.img-crisp.lozad.group--2x alt="Compliance Overview diagram" data-src="https://images.ctfassets.net/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/9b634cd5b8a778dc4fc7ae51d6a11239/platform-overview-diagram-2x.png" /
 
   #building.row.align-center
     .columns.small-12.text-center
@@ -117,24 +117,24 @@ section#tech.section-article
             h4.headline-5 = block.title
             p = block.body
             img.lozad data-src = block.image
-  #capabilities
+
+  #capabilities.row.align-center
+    .columns.small-12.large-8
+      h3.heading-3.text-center.group Powerful capabilities and features under the hood
     .row.align-center
-      .columns.small-12.large-8
-        h3.heading-3.text-center.group Powerful capabilities and features under the hood
-      .row.align-center
-        .columns.small-6.large-5
-          ul.list-check.text-larger
-            li Quickly deploy IPSEC or TLS VPNs in minutes
-            li Nightly backups
-            li Proactive security patching. <em>Remember WannaCry? We were patched 1 month prior to it hitting.</em>
-            li Automation of network overlays across Docker containers
-        .columns.small-6.large-5
-          ul.list-check.text-larger
-            li Let’s Encrypt
-            li Self-service scaling of internal application and database services
-            li Proactive health checks
-            li Hot database swaps
-            li Enhanced service scheduling with zones
+      .columns.small-6.large-5
+        ul.list-check.text-larger
+          li Quickly deploy IPSEC or TLS VPNs in minutes
+          li Nightly backups
+          li Proactive security patching. <em>Remember WannaCry? We were patched 1 month prior to it hitting.</em>
+          li Automation of network overlays across Docker containers
+      .columns.small-6.large-5
+        ul.list-check.text-larger
+          li Let’s Encrypt
+          li Self-service scaling of internal application and database services
+          li Proactive health checks
+          li Hot database swaps
+          li Enhanced service scheduling with zones
 
 section#ui.section-article.container-gray-11
   .row.align-center
