--- a/source/partials/snippets/_footer.erb
+++ b/source/partials/snippets/_footer.erb
@@ -19,7 +19,7 @@
         <div class="columns">
             <ul class="menu align-middle group">
                 <li>
-                    <a class="nav-logo--link"><svg class="nav-logo" id=datica-logo-footer><use class=symbol-icon xlink:href="#datica-logo-horiz"></use></svg></a>
+                    <a class="nav-logo--link" href="/" title="Datica Home"><svg class="nav-logo" id=datica-logo-footer><use class=symbol-icon xlink:href="#datica-logo-horiz"></use></svg></a>
                 </li>
                 <% data.footer_misc.each do |m| %>
                     <li>
